--- a/index.html
+++ b/index.html
@@ -4,3 +4,14 @@
 <ul>
   <li><a href="https://colorsw0rld.github.io/2016-04-25_%E6%84%8F%E8%AF%86%E5%B7%A5%E5%9D%8A%20_%20%E6%88%91%E4%B8%8E%E7%9B%B4%E7%94%B7.html">意识工坊 | 我与直男</a></li>
 </ul>
+
+
+
+<h3>2019</h3>
+<ul>
+  <li><a href="https://colorsw0rld.github.io/2019-11-11_隐蔽派对Vol2%20_%20虚拟的网络上，我们在小软件上互相窥探.html">隐蔽派对Vol2 _ 虚拟的网络上，我们在小软件上互相窥探</a></li>
+  
+  <li><a href="https://colorsw0rld.github.io/2019-12-01_专访 _ “目的地”HIV检测员：没有真正接触到的时候，你永远觉得那离你很遥远.html">2019-12-01_专访 _ “目的地”HIV检测员：没有真正接触到的时候，你永远觉得那离你很遥远</a></li>
+</ul>
+
+
