--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <h1>ColorsWorld Archive</h1>
 
 <h3>2019</h3>
-<ul>
-  <li><a href="https://colorsw0rld.github.io/articles/2019-11-11_隐蔽派对Vol2%20_%20虚拟的网络上，我们在小软件上互相窥探.html">隐蔽派对Vol2 | 虚拟的网络上，我们在小软件上互相窥探</a></li>
-  
-  <li><a href="https://colorsw0rld.github.io/2019-12-01_专访 _ “目的地”HIV检测员：没有真正接触到的时候，你永远觉得那离你很遥远.html">专访 | “目的地”HIV检测员：没有真正接触到的时候，你永远觉得那离你很遥远</a></li>
+<ul> 
+  <li><a href="https://colorsw0rld.github.io/articles/2019/2019-11-11_001.html">隐蔽派对Vol2 | 虚拟的网络上，我们在小软件上互相窥探</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2019/2019-12-01_001.html">专访 | “目的地”HIV检测员：没有真正接触到的时候，你永远觉得那离你很遥远</a></li>
 </ul>
 
 <h3>2016</h3>
 <ul>
-  <li><a href="https://colorsw0rld.github.io/2016-04-25_%E6%84%8F%E8%AF%86%E5%B7%A5%E5%9D%8A%20_%20%E6%88%91%E4%B8%8E%E7%9B%B4%E7%94%B7.html">意识工坊 | 我与直男</a></li>
+	<li><a href="https://colorsw0rld.github.io/articles/2016/2016-04-25_001.html">意识工坊 | 我与直男</a></li>
 </ul>
 
 <h3>2015</h3>
@@ -26,6 +25,16 @@
   <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-07_001.html">几个友善的可以提供心理咨询服务的地方的介绍</a></li>
   <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-08_001.html">【魔柜】陪聊服务正式推出,请转给你的LGBTQ朋友</a></li>
   <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-10_001.html">【彩虹文艺| 邱妙津：关于鳄鱼的预言</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-12_001.html">[转载]心理微课堂 | 你的衣柜不宽，藏着你的天堂</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-13_001.html">彩虹文艺|阿妹的彩虹天堂</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-15_001.html">【魔柜】每周陪聊持续进行，请转给你的LGBTQ朋友</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-15_002.html">爱爱有风险，「咬」需谨慎</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-19_001.html">你一定想听的——李银河北大讲座全记录</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-21_001.html">热评|电击疗法这么厉害，不妨治治你的“直男癌”吧</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-27_001.html">【线下活动| 神秘柜子新功能上线！</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-29_001.html">意识工坊|这是我们梦想做的事情</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-10-31_001.html">多图|直击台北同志大游行</a></li>
+  <li><a href="https://colorsw0rld.github.io/articles/2015/2015-11-03_001.html">意识工坊|妈呀，我为什么是GAY</a></li>
 
 </ul>	
 	
