--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-17 517 - 跟我们一起，寻找影视剧里的你.html">517 - 跟我们一起，寻找影视剧里的你</a></li>
 		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-18-转载-第一届性-别创作扶植计划.html">转载-第一届性-别创作扶植计划</a></li>
 		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-19 517｜ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事.html">517｜ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事</a></li>
-		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-20 社交智库 - 给我一个晚风和热吻的夏天.htm">社交智库 - 给我一个晚风和热吻的夏天.htm</a></li>
-		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-26 社交智库 - 给我一个晚风和热吻的夏天.htm">社交智库 - 给我一个晚风和热吻的夏天.htm</a></li>
+		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-20 社交智库 - 给我一个晚风和热吻的夏天.htm">社交智库 - 给我一个晚风和热吻的夏天</a></li>
+		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-26 社交智库 - 给我一个晚风和热吻的夏天.htm">社交智库 - 给我一个晚风和热吻的夏天</a></li>
 		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-29 线上讨论｜开放式关系：约束还是自由？.html">线上讨论｜开放式关系：约束还是自由？</a></li>
-		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-29 给ColorsWorld的新朋友们：粉丝群入群须知.htm">给ColorsWorld的新朋友们：粉丝群入群须知.htm</a></li>
-		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-30 隐蔽派对Vol 05 - 我们聊了聊「跨性别」.htm">隐蔽派对Vol 05 - 我们聊了聊「跨性别」.htm</a></li>
+<!-- 		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-29 给ColorsWorld的新朋友们：粉丝群入群须知.htm">给ColorsWorld的新朋友们：粉丝群入群须知</a></li>
+		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-05-30 隐蔽派对Vol 05 - 我们聊了聊「跨性别」.htm">隐蔽派对Vol 05 - 我们聊了聊「跨性别」</a></li> -->
 		<li><a href="https://colorsw0rld.github.io/articles/2021/ColorsWorld_-2021-06-03 意识工坊｜《上帝之国》观影沙龙.html">意识工坊｜《上帝之国》观影沙龙</a></li>
 
 	</ul>
