Update index 2020 Oct.

--- a/index.html
+++ b/index.html
@@ -210,6 +210,30 @@
 			  >虹线墙09 - 「早岁那知世事艰」，现在我不再年少轻狂。</a
 			>
 		  </li>
+		  <li>
+			<a
+			  href="articles/2020/[ColorsWorld] - 2020-10-16 虹线墙09 - “我还喜欢你吗？或许答案一直是是的。”.htm"
+			  >虹线墙09 - “我还喜欢你吗？或许答案一直是是的。</a
+			>
+		  </li>
+		  <li>
+			<a
+			  href="articles/2020/[ColorsWorld] - 2020-10-19 招新 - 与我们一起追逐彩虹吗.html"
+			  >招新 - 与我们一起追逐彩虹吗</a
+			>
+		  </li>
+		  <li>
+			<a
+			  href="articles/2020/[ColorsWorld] - 2020-10-27 隐蔽派对Vol3 - 疫情，隔离与恋爱.htm"
+			  >隐蔽派对Vol3 - 疫情，隔离与恋爱</a
+			>
+		  </li>
+		  <li>
+			<a
+			  href="articles/2020/[ColorsWorld] - 2020-10-30 虹线墙11- “希望有一天能有勇气把自己最后一道防线袒露给你”.htm"
+			  >虹线墙11- “希望有一天能有勇气把自己最后一道防线袒露给你”</a
+			>
+		  </li>
 		</ul>
 
 		<h3>2019</h3>
