--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <li><a href="articles/2021/ColorsWorld_-2021-05-16-517原创研究-同性亲密关系中的角色.html">517原创研究-同性亲密关系中的角色</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-17 517 - 跟我们一起，寻找影视剧里的你.html">517 - 跟我们一起，寻找影视剧里的你</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-18-转载-第一届性-别创作扶植计划.html">转载-第一届性-别创作扶植计划</a></li>
-<li><a href="articles/2021/ColorsWorld_-2021-05-19 517｜ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事.html">517｜ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事</a></li>
+<li><a href="articles/2021/517｜ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事 - 日记 - 豆瓣.html">517-ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-20-社交智库-给我一个晚风和热吻的夏天.html">社交智库-给我一个晚风和热吻的夏天</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-26-社交智库-给我一个晚风和热吻的夏天.html">社交智库-给我一个晚风和热吻的夏天</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-29 线上讨论｜开放式关系：约束还是自由？.html">线上讨论｜开放式关系：约束还是自由？</a></li>
