--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 <li><a href="articles/2021/ColorsWorld_9月5日_重温 _ 浅析我国历史中主流文化对同性恋的态度变化.html">9月5日_重温 _ 浅析我国历史中主流文化对同性恋的态度变化</a></li>
 <li><a href="articles/2021/ColorsWorld_9月7日_文学评论 _「S小说」与「百合」文化：女性主体的文学批评（章节3·完结）.html">9月7日_文学评论 _「S小说」与「百合」文化：女性主体的文学批评（章节3·完结）</a></li>
 <li><a href="articles/2021/ColorsWorld_9月9日_重温 _ 我们需要怎样的_厕所革命_？.html">9月9日_重温 _ 我们需要怎样的_厕所革命_？</a></li>
+<li><a href="articles/2021/ColorsWorld_10月14日_翻译 _ 朱迪斯·巴特勒：我们需要重新思考女性这一类别.html">10月14日_翻译 _ 朱迪斯·巴特勒：我们需要重新思考女性这一类别</a></li>
+<li><a href="articles/2021/ColorsWorld_10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？.html">10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？</a></li>
 
 		</ul>
 
