--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <li><a href="articles/2021/ColorsWorld_9月9日_重温 _ 我们需要怎样的_厕所革命_？.html">9月9日_重温 _ 我们需要怎样的_厕所革命_？</a></li>
 <li><a href="articles/2021/ColorsWorld_10月14日_翻译 _ 朱迪斯·巴特勒：我们需要重新思考女性这一类别.html">10月14日_翻译 _ 朱迪斯·巴特勒：我们需要重新思考女性这一类别</a></li>
 <li><a href="articles/2021/ColorsWorld_10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？.html">10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？</a></li>
+<li><a href="articles/2021/ColorsWorld_10月24日_翻译 _ 全球同性婚姻现状一览.html">10月24日_翻译 _ 全球同性婚姻现状一览</a></li>
 
 		</ul>
 
