--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 <li><a href="articles/2021/ColorsWorld_10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？.html">10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？</a></li>
 <li><a href="articles/2021/ColorsWorld_10月24日_翻译 _ 全球同性婚姻现状一览.html">10月24日_翻译 _ 全球同性婚姻现状一览</a></li>
 <li><a href="articles/2021/ColorsWorld_11月14日_议题讨论招募 _ 为何我们的爱情“保质期”有点短？.html">11月14日_议题讨论招募 _ 为何我们的爱情“保质期”有点短？</a></li>
-
+<li><a href="articles/2021/ColorsWorld_11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（上）.html">11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（上）</a></li>
+<li><a href="articles/2021/ColorsWorld_11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（下）.html">11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（下）</a></li>
 		</ul>
 
 		<h3>2020</h3>
