--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 <li><a href="articles/2021/ColorsWorld_11月14日_议题讨论招募 _ 为何我们的爱情“保质期”有点短？.html">11月14日_议题讨论招募 _ 为何我们的爱情“保质期”有点短？</a></li>
 <li><a href="articles/2021/ColorsWorld_11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（上）.html">11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（上）</a></li>
 <li><a href="articles/2021/ColorsWorld_11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（下）.html">11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（下）</a></li>
+<li><a href="articles/2021/ColorsWorld_12月1日_互动Talkshow _ 观后感--艾滋仍在.html">12月1日_互动Talkshow _ 观后感--艾滋仍在</a></li>
 		</ul>
 
 		<h3>2020</h3>
