--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="articles/2021/ColorsWorld_-2021-05-02-隐蔽派对Vol4-“姬圈恋姐”是真的吗？.html">隐蔽派对Vol4-“姬圈恋姐”是真的吗？</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-06-意识工坊-《日常对话》观影沙龙.html">意识工坊-《日常对话》观影沙龙</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-08-517-ColorsWorld×Bosie-彩虹色的你：彩虹装扮拍摄活动招募.html">517-ColorsWorld×Bosie-彩虹色的你：彩虹装扮拍摄活动招募</a></li>
-<li><a href="articles/2021/ColorsWorld_-2021-05-16-517原创研究-同性亲密关系中的角色.html">517原创研究-同性亲密关系中的角色</a></li>
+<li><a href="articles/2021/ColorsWorld_5月17日_原创研究 _ 同性亲密关系中的角色.html">5月17日_原创研究 _ 同性亲密关系中的角色</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-17 517 - 跟我们一起，寻找影视剧里的你.html">517 - 跟我们一起，寻找影视剧里的你</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-18-转载-第一届性-别创作扶植计划.html">转载-第一届性-别创作扶植计划</a></li>
 <li><a href="articles/2021/ColorsWorld_-2021-05-18-ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事.html">517-ColorsWorld×bosie彩虹穿搭拍摄：11位伙伴的多元表达与穿衣故事</a></li>
