--- a/index.html
+++ b/index.html
@@ -69,29 +69,30 @@
 <li><a href="articles/2021/ColorsWorld_9月9日_重温 _ 我们需要怎样的_厕所革命_？.html">9月9日_重温 _ 我们需要怎样的_厕所革命_？</a></li>
 <li><a href="articles/2021/ColorsWorld_10月14日_翻译 _ 朱迪斯·巴特勒：我们需要重新思考女性这一类别.html">10月14日_翻译 _ 朱迪斯·巴特勒：我们需要重新思考女性这一类别</a></li>
 <li><a href="articles/2021/ColorsWorld_10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？.html">10月14日_讨论笔记 _ 「娘炮」来自金星，「胡须」来自火星？</a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-17 21_议题讨论招募 _ “消失的妻子”--从拉姆案出发重新审视家暴.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-19 21_征集｜性少数标签之外的你是什么样的呢？.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-20 21_意识工坊丨报名：我们找了全球最大的艾滋公益组织讲师面对面Talk To You.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-21 21_互动TalkShow _ 他没有射而且当场检测一道杠，我怎么就中招了啊？！爱尔兰HIV携带者平均寿命更长？.html"></a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-17 21_议题讨论招募 _ “消失的妻子”--从拉姆案出发重新审视家暴.html">10-17议题讨论招募 _ “消失的妻子”--从拉姆案出发重新审视家暴</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-19 21_征集｜性少数标签之外的你是什么样的呢？.html">10-19 征集｜性少数标签之外的你是什么样的呢？</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-20 21_意识工坊丨报名：我们找了全球最大的艾滋公益组织讲师面对面Talk To You.html">10-20 21_意识工坊丨报名：我们找了全球最大的艾滋公益组织讲师面对面Talk To You</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-21 21_互动TalkShow _ 他没有射而且当场检测一道杠，我怎么就中招了啊？！爱尔兰HIV携带者平均寿命更长？.html">10-21 互动TalkShow _ 他没有射而且当场检测一道杠，我怎么就中招了啊？！爱尔兰HIV携带者平均寿命更长？</a></li>
 <li><a href="articles/2021/ColorsWorld_10月24日_翻译 _ 全球同性婚姻现状一览.html">10月24日_翻译 _ 全球同性婚姻现状一览</a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-24 21_翻译 _ 为什么要坚持性别的非二元性？.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-25 21_故事 _ 废弃车库的无妄关系.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-26 21_讨论笔记 _ 从拉姆案出发重新审视“家暴”.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-29 21_神秘柜子 _ “性别不是刻板，年龄也没有绝对”.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-10-30 21_重温 _ 关于无性恋，你或许应该知道这些.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-11-02 21_翻译 _ 为何“性别（认同）”的理念会在全世界引起反弹？.html"></a></li><li><a href="articles/2021/ColorsWorld_2021-11-03 21_重温 _ 明清文学中“女同”题材的写作特点和成因：以《封三娘》和《怜香伴》为例.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-11-06 21_社交智库 _ 初雪夜的七日浪漫约定！约会报名ON！.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-11-08 21_通知 _ 这样的员工赶紧开除！敢给老板写威胁信…….html"></a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-24 21_翻译 _ 为什么要坚持性别的非二元性？.html">10-24 翻译 _ 为什么要坚持性别的非二元性？</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-25 21_故事 _ 废弃车库的无妄关系.html">10-25 故事 _ 废弃车库的无妄关系</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-26 21_讨论笔记 _ 从拉姆案出发重新审视“家暴”.html">10-26 讨论笔记 _ 从拉姆案出发重新审视“家暴”</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-29 21_神秘柜子 _ “性别不是刻板，年龄也没有绝对”.html">10-29 神秘柜子 _ “性别不是刻板，年龄也没有绝对”</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-10-30 21_重温 _ 关于无性恋，你或许应该知道这些.html">10-30 重温 _ 关于无性恋，你或许应该知道这些</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-11-02 21_翻译 _ 为何“性别（认同）”的理念会在全世界引起反弹？.html">11-02 翻译 _ 为何“性别（认同）”的理念会在全世界引起反弹？</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-11-03 21_重温 _ 明清文学中“女同”题材的写作特点和成因：以《封三娘》和《怜香伴》为例.html">2021-11-03 21_重温 _ 明清文学中“女同”题材的写作特点和成因：以《封三娘》和《怜香伴》为例</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-11-06 21_社交智库 _ 初雪夜的七日浪漫约定！约会报名ON！.html">11-06 社交智库 _ 初雪夜的七日浪漫约定！约会报名ON！</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-11-08 21_通知 _ 这样的员工赶紧开除！敢给老板写威胁信…….html">11-08 通知 _ 这样的员工赶紧开除！敢给老板写威胁信……</a></li>
 <li><a href="articles/2021/ColorsWorld_11月14日_议题讨论招募 _ 为何我们的爱情“保质期”有点短？.html">11月14日_议题讨论招募 _ 为何我们的爱情“保质期”有点短？</a></li>
 <li><a href="articles/2021/ColorsWorld_11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（上）.html">11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（上）</a></li>
 <li><a href="articles/2021/ColorsWorld_11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（下）.html">11月28日_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界（下）</a></li>
 <li><a href="articles/2021/ColorsWorld_12月1日_互动Talkshow _ 观后感--艾滋仍在.html">12月1日_互动Talkshow _ 观后感--艾滋仍在</a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-02 21_故事 _ 醒来--中关村大学生txl情史.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-03 21_意识工坊 _ 《喜宴》观影沙龙.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-04 21_隐蔽派对Vol.09 _ 妈，我是同性恋.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-06 21_必备手册 _ 2021多元性别新生指南.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-07 21_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界.html"></a></li>
-<li><a href="articles/2021/ColorsWorld_2021-12-08 21_社交智库 _ “你是我抵御凛冬的温暖” 一周CP活动回顾.html"></a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-02 21_故事 _ 醒来--中关村大学生txl情史.html">12-02 故事 _ 醒来--中关村大学生txl情史</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-03 21_意识工坊 _ 《喜宴》观影沙龙.html">12-03 意识工坊 _ 《喜宴》观影沙龙</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-04 21_隐蔽派对Vol.09 _ 妈，我是同性恋.html">04 隐蔽派对Vol.09 _ 妈，我是同性恋</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-06 21_必备手册 _ 2021多元性别新生指南.html">06 必备手册 _ 2021多元性别新生指南</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-07 21_翻译 _ “糖恋”：“糖爹”和“糖宝”的世界.html">12-07 翻译 _ “糖恋”：“糖爹”和“糖宝”的世界</a></li>
+<li><a href="articles/2021/ColorsWorld_2021-12-08 21_社交智库 _ “你是我抵御凛冬的温暖” 一周CP活动回顾.html">12-08 社交智库 _ “你是我抵御凛冬的温暖” 一周CP活动回顾</a></li>
 
 		</ul>
 
